--- a/prod/index.html
+++ b/prod/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="portfolio">
     
     <head>
+        <base href="/index.html">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link type="text/css" rel="stylesheet" href="app.min.css" />
@@ -16,12 +17,12 @@
 
         </div>
         <header ng-controller="Header">
-            <figure> <a href="#">Taylor Code</a>
+            <figure> <a href="/">Taylor Code</a>
 
             </figure>
             <nav>
                 <ul>
-                    <li><a ng-click="scrollTo('intro')">Home</a>
+                    <li><a href="/">Home</a>
                     </li>
                     <li><a ng-click="scrollTo('projects')">Projects</a>
                     </li>
@@ -37,6 +38,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-touch.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular-cookies.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-animate.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
         <!-- plugins -->
         <script src="http://yandex.st/highlightjs/7.5/highlight.min.js"></script>
