--- a/prod/index.html
+++ b/prod/index.html
@@ -10,7 +10,7 @@
     </head>
     
     <body ontouchstart>
-        <div class="colors"> <span></span>
+        <div id="colors"> <span></span>
  <span></span>
  <span></span>
  <span></span>
@@ -22,7 +22,7 @@
             </figure>
             <nav>
                 <ul>
-                    <li><a href="/">Home</a>
+                    <li><a ng-click="scrollTo('colors')">Home</a>
                     </li>
                     <li><a ng-click="scrollTo('projects')">Projects</a>
                     </li>
