--- a/dev/index.html
+++ b/dev/index.html
@@ -3,6 +3,7 @@
     
     <head>
         <base href="/index.html">
+        <title>Taylor McIntyre taylorcode Front-End Web Developer and User Experience Designer Portfolio Website</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta name="google-site-verification" content="g8SpifNh2ebTOh43MV6_0iKHfANxhKcQgnqQ4E6BJsI">
