--- a/prod/index.html
+++ b/prod/index.html
@@ -3,7 +3,8 @@
     
     <head>
         <base href="/index.html">
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
+        <meta name="fragment" content="!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta name="google-site-verification" content="g8SpifNh2ebTOh43MV6_0iKHfANxhKcQgnqQ4E6BJsI">
         <link type="text/css" rel="stylesheet" href="app.min.css" />
