--- a/dev/index.html
+++ b/dev/index.html
@@ -2,9 +2,9 @@
 <html lang="en" ng-app="portfolio">
     
     <head>
-        <base href="/">
-        <title>Taylor McIntyre taylorcode Front-End Web Developer and User Experience Designer Portfolio Website</title>
-        <meta charset="utf-8" />
+        <base href="/index.html">
+        <meta charset="utf-8">
+        <meta name="fragment" content="!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta name="google-site-verification" content="g8SpifNh2ebTOh43MV6_0iKHfANxhKcQgnqQ4E6BJsI">
         <link type="text/css" rel="stylesheet" href="assets/stylesheets/main.css" />
