--- a/prod/index.html
+++ b/prod/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="portfolio">
     
     <head>
-        <base href="/index.html">
+        <base href="/">
         <meta charset="utf-8">
         <meta name="fragment" content="!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
