add title and meta

--- a/prod/index.html
+++ b/prod/index.html
@@ -3,10 +3,12 @@
     
     <head>
         <base href="/">
+        <title>Taylor McIntyre taylorcode Porfolio Website</title>
         <meta charset="utf-8">
         <meta name="fragment" content="!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta name="google-site-verification" content="g8SpifNh2ebTOh43MV6_0iKHfANxhKcQgnqQ4E6BJsI">
+        <meta name="description" content="Taylor McIntyre Portfolio Website. I'm a Web Developer, a Designer, and a Experience Enthusiast. Come see my work and blog on JavaScript, Node JS, Mongo DB, Angular JS, and more.">
         <link type="text/css" rel="stylesheet" href="app.min.css" />
         <link rel="stylesheet" href="http://yandex.st/highlightjs/7.5/styles/default.min.css">
     </head>
